--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Random Dog</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h1>weather app</h1>
+    <h1>Random Dog</h1>
 
     <section id="app"></section>
 
